feat: Add SecuritySystemProjection and enhanced repository queries with role-based actions
- Introduced SecuritySystemProjection interface for efficient security system queries with role information
- Added SecuritySystemWithActions to encapsulate security systems with their allowed actions based on user roles
- Enhanced SecuritySystemRepository with projection-based queries using ARRAY_AGG for role aggregation
- Refactored DBInitializer to use constructor injection and proper Spring configuration
- Updated integration and component tests to verify role-based action filtering
- Improved test coverage for repository projection queries

Co-authored by Claude.